@@ -114,7 +114,7 @@
 			<td title="{stats_total_tip_text}">
 				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total">
 					<span class="stats_title">{stats_total_text}</span>
-					<span class="stats_num small">{total_projects}</span>
+					<span class="stats_num small">{total_projects_human}</span>
 				</a>
 			</td>
 		</tr>
