@@ -1,6 +1,7 @@
 Development Portal (2019-11-21 shi)
 ==============================
 Update all target_blank with noopener and noreferrer
+Commafy remaining stats and numbers
 
 
 Development Portal (2019-11-20 shi)
